--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.14.1",
+    "botkit": "0.0.4",
     "express": "^4.13.3",
     "monk": "^1.0.1"
   }
