--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "botkit": "0.0.4",
-    "express": "^4.13.3",
-    "mongodb": "~1.4.0",
-    "monk": "^1.0.1"
+    "express": "^4.13.3"
   }
 }
