--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "newrelic": "^1.28.3"
+    "newrelic": "^1.28.3",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   },
   "engines": {
     "node": "8.1.4"
