--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "request-promise": "^4.2.1"
   },
   "engines": {
-    "node": "8.1.4"
+    "node": "11.6.0"
   },
   "repository": "git@github.com:aaronlabrie/slacking-off",
-  "author": "Aaron LaBrie <aaron.labrie@returnpath.com>"
+  "author": "Aaron LaBrie <aaron@aaronlabrie.com>"
 }
